--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,6 +1,7 @@
 doctype html
 html
   head
+    meta charset="UTF-8"
     title
       | InstaClone
     = csrf_meta_tags
@@ -8,4 +9,9 @@ html
     = stylesheet_link_tag    'application', media: 'all'
     = javascript_include_tag 'application'
   body
+    - if logged_in?
+      = render 'shared/header'
+    - else
+      = render 'shared/before_login_header'
+    = render 'shared/flash_messages'
     = yield
