--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -8,7 +8,7 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-info
       button.btn.btn-outline-dark.my-2.my-sm-0 type="submit"  Search
     ul.navbar-nav.mt-2.mt-lg-0
       li.nav-item
-        a.nav-link href="#"
+        = link_to new_post_path, class: 'nav-link' do
           = icon 'far', 'image', class: 'fa-lg'
       li.nav-item
         a.nav-link href="#"
