--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -35,17 +35,7 @@
           = simple_format(@post.body)
       hr
       / コメント一覧
-      .row.no-gutters
-        .col-2
-          = image_tag 'profile-placeholder.png', size: '40x40', class: 'rounded-circle'
-        .col-10
-          | ダミーコメントダミーコメントダミーコメント
-      hr
-      .row.no-gutters
-        .col-2
-          = image_tag 'profile-placeholder.png', size: '40x40', class: 'rounded-circle'
-        .col-10
-          | ダミーコメントダミーコメントダミーコメント
+      = render 'comments/comments', comments: @comments
     hr.m-0
     .post-comment.p-3
       form.form-inline.mb-0
