[add] コメントの新規投稿機能を実装

--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -38,7 +38,7 @@
       = render 'comments/comments', comments: @comments
     hr.m-0
     .post-comment.p-3
-      form.form-inline.mb-0
-        input type="text" class="form-control input-comment-body" placeholder="コメント"
-        button type="submit" class="btn btn-primary btn-raised"
-          | 投稿
+      / 新規コメント投稿欄
+      = form_with model: [@post, @comment], class: 'd-flex mb-0 flex-nowrap justify-content-between', remote: true do |f|
+        = f.text_field :body, class: 'form-control input-comment-body', placeholder: 'コメント'
+        = f.submit '投稿', class: 'btn btn-primary btn-raised'
