[add] コメントの編集機能を実装（更新機能は次のコミットで実装）

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -15,4 +15,6 @@ html
     - else
       = render 'shared/before_login_header'
     = render 'shared/flash_messages'
-    = yield
+    main
+      = yield
+      = render 'shared/modal'
