--- a/app/views/comments/_modal_form.html.slim
+++ b/app/views/comments/_modal_form.html.slim
@@ -9,6 +9,5 @@
         / shallowオプションを使用しているため、model: comment とする（postについてはmodelに渡さない）
         / 以下が参考としたQiita記事
         / https://qiita.com/snskOgata/items/44d32a06045e6a52d11c#23-form_with-model-modela-modelb
-        = form_with model: comment, class: 'd-flex mb-0 flex-nowrap justify-content-between', remote: true do |f|
-          = f.text_field :body, class: 'form-control input-comment-body', placeholder: 'コメント'
-          = f.submit '投稿', class: 'btn btn-primary btn-raised'
+        / ここでpostをnilにして、共通化する方法はさすがに思いつかなかった。。。
+        = render 'form', post: nil, comment: comment
