--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -39,6 +39,4 @@
     hr.m-0
     .post-comment.p-3
       / 新規コメント投稿欄
-      = form_with model: [@post, @comment], class: 'd-flex mb-0 flex-nowrap justify-content-between', remote: true do |f|
-        = f.text_field :body, class: 'form-control input-comment-body', placeholder: 'コメント'
-        = f.submit '投稿', class: 'btn btn-primary btn-raised'
+      = render 'comments/form', post: @post, comment: @comment
