--- a/app/views/comments/create.js.slim
+++ b/app/views/comments/create.js.slim
@@ -1,8 +1,14 @@
+/ NGワードを含む場合
+- if @ng_flag
+  / NGワードを含む投稿をしたのでアラートを出す
+  | alert("NGワードが含まれています。綺麗な言葉を使いましょう。");
+  / NGワードを含む投稿をしたので、次の投稿がしやすいように投稿欄を空にする
+  | $('.input-comment-body').val('');
 / バリデーションに抵触した場合
-- if @comment.errors.present?
+- elsif @comment.errors.present?
   / エラーメッセージをそれぞれ改行して、全て表示させる
   | alert("#{@comment.errors.full_messages.join('\n')}");
-/ バリデーションに抵触しない場合
+/ NGワードを含まず、バリデーションにも抵触しない場合
 - else
   / 新しい投稿をコメント一覧の一番上に持ってくる
   | $('.comments-box').prepend("#{j render('comments/comment', comment: @comment)}");
