--- a/app/views/posts/_post.html.slim
+++ b/app/views/posts/_post.html.slim
@@ -9,6 +9,10 @@
             = icon 'far', 'trash-alt', class: 'fa-lg'
           = link_to edit_post_path(post) do
             = icon 'far', 'edit', class: 'fa-lg'
+      / もしcurrent_userがログインしており、この投稿がログインユーザーのものである場合
+      - if current_user && !current_user.own?(post)
+        .ml-auto
+          = render 'like_area', post: post
   = link_to post_path(post) do
     .swiper-container
       .swiper-wrapper
