[add] フォロー・アンフォロー機能実装 + posts/index 画面の右側に出てくるユーザー表示部分を作成

--- a/app/views/posts/index.html.slim
+++ b/app/views/posts/index.html.slim
@@ -15,17 +15,6 @@
           .card-header
             | ユーザー
           .card-body
-            .user.mb-3
-              = image_tag 'profile-placeholder.png', size: '40x40', class: 'rounded-circle mr-1'
-              | ダミー京介
-            .user.mb-3
-              = image_tag 'profile-placeholder.png', size: '40x40', class: 'rounded-circle mr-1'
-              | ダミー寅泰
-            .user.mb-3
-              = image_tag 'profile-placeholder.png', size: '40x40', class: 'rounded-circle mr-1'
-              | ダミー常松
-            .user.mb-3
-              = image_tag 'profile-placeholder.png', size: '40x40', class: 'rounded-circle mr-1'
-              | ダミーまこと
+            = render @users
           .card-footer
             = link_to 'すべて見る', '#'
