[add] ユーザーの詳細画面を作成
投稿一覧の画面からユーザーの詳細画面にアクセスして、動くように実装した

--- a/app/views/posts/index.html.slim
+++ b/app/views/posts/index.html.slim
@@ -17,4 +17,4 @@
           .card-body
             = render @users
           .card-footer
-            = link_to 'すべて見る', '#'
+            = link_to 'すべて見る', users_path
