[add] 投稿がない場合「投稿がありません」と表示させる

--- a/app/views/posts/index.html.slim
+++ b/app/views/posts/index.html.slim
@@ -1,9 +1,11 @@
 .container
   .row
     .col-md-8.col-12
-      / eachで回すよりパフォーマンスがよい
-      / https://pikawaka.com/rails/partial_template
-      = render @posts
+      - if @posts.present?
+        = render @posts
+      - else
+        .text-center.font-weight-bold
+          | 投稿がありません
       = paginate @posts
     .col-md-4.col-12
       - if logged_in?
