--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -2,10 +2,9 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-info
   = link_to 'InstaClone', root_path, class: 'navbar-brand'
   button.navbar-toggler aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label=("Toggle navigation") data-target="#navbarTogglerDemo02" data-toggle="collapse" type="button"
     span.navbar-toggler-icon
+    / 検索フォーム
   #navbarTogglerDemo02.collapse.navbar-collapse
-    form.form-inline.my-2.my-lg-0.mr-auto
-      input.form-control.mr-sm-2 placeholder="Search" type="search" /
-      button.btn.btn-outline-dark.my-2.my-sm-0 type="submit"  Search
+    = render 'posts/search_form', search_form: @search_form
     ul.navbar-nav.mt-2.mt-lg-0
       li.nav-item
         = link_to new_post_path, class: 'nav-link' do
