[add] ユーザーの詳細画面に投稿のサムネを表示させる

--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -9,3 +9,6 @@
             = @user.username
           .text-center
             = render 'follow_area', user: @user
+          hr
+          .row
+            = render partial: 'posts/thumbnail_post', collection: @user.posts
