--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -97,3 +97,26 @@ img {
   justify-content: center;
 }
 
+.thumbs {
+  width: 100%;
+  position: relative;
+  display: block;
+
+  // 擬似要素を追加できる
+  // 空の要素を追加し、その要素で埋め尽くす
+  &::before {
+    content: "";
+    display: block;
+    padding-top: 100%;
+  }
+
+  // absoluteにより、擬似要素を覆うような形にしている
+  // object-fitを使うと、中央からいい感じにトリミングしてくれる
+  img {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    object-fit: cover;
+  }
+}
