[add] mypageに関するJSとCSSを設定

--- a/app/views/layouts/mypage.html.slim
+++ b/app/views/layouts/mypage.html.slim
@@ -6,8 +6,8 @@ html
     title マイページ | InstaCloneApp
     = csrf_meta_tags
     = csp_meta_tag
-    / = stylesheet_link_tag 'mypage', media: 'all'
-    / = javascript_include_tag 'mypage'
+    = stylesheet_link_tag 'mypage', media: 'all'
+    = javascript_include_tag 'mypage'
   body
     = render 'shared/header'
     = render 'shared/flash_messages'
