[add] コメントの加筆（質問について）

--- a/app/views/mypage/accounts/edit.html.slim
+++ b/app/views/mypage/accounts/edit.html.slim
@@ -1,5 +1,7 @@
 = form_with model: @user, url: mypage_account_path, method: :patch, local: true do |f|
   / なぜ、だいそんさんのコードでは object: @user ではなく、object: f.object となっているのか分かりませんでした
+  / TechEssentialsで質問して解決（@userでもよいが、f.objectの方が使い回しがしやすいとのこと）
+  / https://tech-essentials.work/questions/121
   = render 'shared/error_messages', object: @user
   .form-group
     = f.label :avatar
