[update] comments_controllerにあるNGワードのロジックをモデルに寄せた
本来であればカスタムバリデータで対応したいところではあるが、とりあえずこれで対応

--- a/app/views/comments/update.js.slim
+++ b/app/views/comments/update.js.slim
@@ -1,5 +1,5 @@
 / 更新がNGワードを含む場合
-- if @ng_flag
+- if @comment.has_ng_words?
   / NGワードを含む投稿をしたのでアラートを出す
   | alert("NGワードが含まれています。綺麗な言葉を使いましょう。");
 / 更新がバリデーションに抵触した場合
