--- a/app/views/shared/_header_notifications.html.slim
+++ b/app/views/shared/_header_notifications.html.slim
@@ -1,6 +1,6 @@
 - if current_user.notifications.present?
   - current_user.notifications.recent(10).each do |notification|
-    = render "shared/#{notification.call_appropiate_paritial}", notification: notification
+    = render "shared/#{notification.call_appropiate_partial}", notification: notification
   - if current_user.notifications.count > 10
     = link_to 'すべてみる', mypage_notifications_path, class: 'dropdown-item justify-content-center'
 - else
