--- a/app/views/shared/_followed_me.html.slim
+++ b/app/views/shared/_followed_me.html.slim
@@ -3,5 +3,5 @@
   object
     = link_to notification.notifiable.follower.username, user_path(notification.notifiable.follower)
   | があなたをフォローしました
-  .text-right
+  .ml-auto
     = l notification.created_at, format: :short
