--- a/app/views/shared/_liked_to_own_post.html.slim
+++ b/app/views/shared/_liked_to_own_post.html.slim
@@ -6,5 +6,5 @@
   object
     = link_to '投稿', post_path(notification.notifiable.post)
   | にいいねしました
-  .text-right
+  .ml-auto
     = l notification.created_at, format: :short
