[fix] has_ng_words? メソッドをng_words?に変更（rubocopチェック）

--- a/app/views/comments/create.js.slim
+++ b/app/views/comments/create.js.slim
@@ -1,5 +1,5 @@
 / NGワードを含む場合
-- if @comment.has_ng_words?
+- if @comment.ng_words?
   / NGワードを含む投稿をしたのでアラートを出す
   | alert("NGワードが含まれています。綺麗な言葉を使いましょう。");
   / NGワードを含む投稿をしたので、次の投稿がしやすいように投稿欄を空にする
