--- a/app/views/comments/update.js.slim
+++ b/app/views/comments/update.js.slim
@@ -1,5 +1,5 @@
 / 更新がNGワードを含む場合
-- if @comment.has_ng_words?
+- if @comment.ng_words?
   / NGワードを含む投稿をしたのでアラートを出す
   | alert("NGワードが含まれています。綺麗な言葉を使いましょう。");
 / 更新がバリデーションに抵触した場合
