--- a/app/views/mypage/notification_settings/edit.html.slim
+++ b/app/views/mypage/notification_settings/edit.html.slim
@@ -1,16 +1,14 @@
 = form_with model: @user, url: mypage_notification_setting_path, method: :patch, local: true do |f|
   = render 'shared/error_messages', object: @user
   .form-group
-    = f.check_box :notification_on_comment
-    = f.label :notification_on_comment
-
-  .form-group
-    = f.check_box :notification_on_like
-    = f.label :notification_on_like
-
-  .form-group
-    = f.check_box :notification_on_follow
-    = f.label :notification_on_follow
-
+    .checkbox 
+      = f.check_box :notification_on_comment
+      = f.label :notification_on_comment
+    .checkbox 
+      = f.check_box :notification_on_like
+      = f.label :notification_on_like
+    .checkbox 
+      = f.check_box :notification_on_follow
+      = f.label :notification_on_follow
   = f.submit class: 'btn btn-primary btn-raised'
   
